--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@
 //  Created by Ashish Gogna on 4/19/16.
 */
 
+@font-face {
+    font-family: Scoreboard;
+    src: url(scoreboard.ttf);
+    font-weight:400;
+}
 body
 {
 	background-repeat: repeat;
@@ -19,4 +24,40 @@ body
 {
 	width: 100%;
 	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.scoreBoard
+{
+	width: 180px;
+	height: 80px;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	margin-left: -90px;
+	margin-top: 10px;
+}
+.scoreBoard img
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+#score
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 169px;
+	height: 59px;
+	background-color: #3B444B;
+	margin-top: 15px;
+	margin-left: 5px;
+	text-align: center;
+	font-family: Scoreboard, Helvetica, Arial, sans-serif;
+	font-size: 36px;
+	line-height: 60px;
+	color: white;
+	border: 1px solid white;
 }
