--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,22 @@ body
 	color: white;
 	border: 1px solid white;
 }
+.popup {
+    width:200px;
+    height:15px;
+    height:auto;
+    position:absolute;
+    left:50%;
+    margin-left:-100px;
+    bottom:20px;
+    background-color: #383838;
+    color: #F0F0F0;
+	font-family: Scoreboard, Helvetica, Arial, sans-serif;
+    font-size: 22px;
+    padding:10px;
+    text-align:center;
+    border-radius: 2px;
+    -webkit-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+    -moz-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+    box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+}
