--- a/styles.css
+++ b/styles.css
@@ -69,14 +69,15 @@ body
     left:50%;
     margin-left:-100px;
     bottom:20px;
-    background-color: #383838;
+    background-color: #3B444B;
     color: #F0F0F0;
 	font-family: Scoreboard, Helvetica, Arial, sans-serif;
     font-size: 22px;
     padding:10px;
     text-align:center;
     border-radius: 2px;
-    -webkit-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
-    -moz-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
-    box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+
+	-webkit-box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.35);
+	-moz-box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.35);
+	box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.35);
 }
