--- a/styles.css
+++ b/styles.css
@@ -62,18 +62,19 @@ body
 	border: 1px solid white;
 }
 .popup {
-    width:200px;
-    height:15px;
-    height:auto;
-    position:absolute;
-    left:50%;
-    margin-left:-100px;
-    bottom:20px;
-    background-color: #3B444B;
-    color: #F0F0F0;
+
+	width: 180px;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	margin-left: -100px;
+	margin-top: 200px;
+	padding: 10px;
+
+	background-color: #3B444B;
+    color: #ffffff;
 	font-family: Scoreboard, Helvetica, Arial, sans-serif;
     font-size: 22px;
-    padding:10px;
     text-align:center;
     border-radius: 2px;
 
