--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,18 @@ body
 	top: 0;
 	left: 0;
 }
+.gameDivBG
+{
+	background-repeat: no-repeat;
+	max-width: 50%;
+	max-height: 20%;
+	width: auto;
+	height: auto;
+	position: absolute;	
+	top: 50%;
+	left: 50%;
+    transform: translate(-50%, -50%);
+}
 .scoreBoard
 {
 	width: 180px;
